update ipa version to 1.7.0

--- a/yuyin.plist
+++ b/yuyin.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://lebolive-1255651273.file.myqcloud.com/static/ipa/yuyin.ipa</string>
+					<string>http://lebolive-1255651273.file.myqcloud.com/static/ipa/yuyini_170.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
