update ipa version to 1.7.0

--- a/yuyin.plist
+++ b/yuyin.plist
@@ -33,9 +33,9 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.YuYin.LeBoLiveShow</string>
+				<string>com.YuYin.CucumberDatingY</string>
 				<key>bundle-version</key>
-				<string>1.6.2</string>
+				<string>1.7.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
